--- a/BHMI.ui
+++ b/BHMI.ui
@@ -47,6 +47,13 @@
             <layout class="QHBoxLayout" name="horizontalLayout_6">
              <item>
               <widget class="QLabel" name="timeLbl">
+               <property name="font">
+                <font>
+                 <pointsize>12</pointsize>
+                 <weight>50</weight>
+                 <bold>false</bold>
+                </font>
+               </property>
                <property name="text">
                 <string>timeLbl</string>
                </property>
@@ -57,6 +64,13 @@
              </item>
              <item>
               <widget class="QLabel" name="dateLbl">
+               <property name="font">
+                <font>
+                 <pointsize>12</pointsize>
+                 <weight>50</weight>
+                 <bold>false</bold>
+                </font>
+               </property>
                <property name="text">
                 <string>dateLbl</string>
                </property>
@@ -67,6 +81,13 @@
              </item>
              <item>
               <widget class="QLabel" name="dayLbl">
+               <property name="font">
+                <font>
+                 <pointsize>12</pointsize>
+                 <weight>50</weight>
+                 <bold>false</bold>
+                </font>
+               </property>
                <property name="text">
                 <string>dayLbl</string>
                </property>
@@ -143,6 +164,11 @@
              </item>
              <item>
               <widget class="QLabel" name="totalBucketsCount">
+               <property name="font">
+                <font>
+                 <pointsize>14</pointsize>
+                </font>
+               </property>
                <property name="text">
                 <string>0</string>
                </property>
@@ -170,6 +196,11 @@
              </item>
              <item>
               <widget class="QLabel" name="totalBucketsCount_2">
+               <property name="font">
+                <font>
+                 <pointsize>14</pointsize>
+                </font>
+               </property>
                <property name="text">
                 <string>0 Kg</string>
                </property>
@@ -219,6 +250,12 @@
               <layout class="QVBoxLayout" name="verticalLayout_4">
                <item>
                 <widget class="QLabel" name="label">
+                 <property name="font">
+                  <font>
+                   <weight>75</weight>
+                   <bold>true</bold>
+                  </font>
+                 </property>
                  <property name="text">
                   <string>Front Pressure </string>
                  </property>
@@ -246,6 +283,12 @@
               <layout class="QVBoxLayout" name="verticalLayout_5">
                <item>
                 <widget class="QLabel" name="label_3">
+                 <property name="font">
+                  <font>
+                   <weight>75</weight>
+                   <bold>true</bold>
+                  </font>
+                 </property>
                  <property name="text">
                   <string>Bottom Pressure </string>
                  </property>
@@ -273,6 +316,12 @@
               <layout class="QVBoxLayout" name="verticalLayout_6">
                <item>
                 <widget class="QLabel" name="label_5">
+                 <property name="font">
+                  <font>
+                   <weight>75</weight>
+                   <bold>true</bold>
+                  </font>
+                 </property>
                  <property name="text">
                   <string>Left Pressure </string>
                  </property>
@@ -370,7 +419,7 @@
         <item>
          <widget class="QPushButton" name="printBtn">
           <property name="styleSheet">
-           <string notr="true">background-color: rgb(78, 154, 6);</string>
+           <string notr="true">background-color: rgb(201, 255, 173);</string>
           </property>
           <property name="text">
            <string>Print</string>
