--- a/NewBucket.ui
+++ b/NewBucket.ui
@@ -31,6 +31,12 @@
        <property name="suffix">
         <string> (kg)</string>
        </property>
+       <property name="maximum">
+        <number>9999999</number>
+       </property>
+       <property name="value">
+        <number>100</number>
+       </property>
       </widget>
      </item>
     </layout>
