--- a/BHMI.ui
+++ b/BHMI.ui
@@ -21,7 +21,7 @@
        <number>2</number>
       </property>
       <item>
-       <layout class="QVBoxLayout" name="bucketParentLayout" stretch="0,0,1">
+       <layout class="QVBoxLayout" name="bucketParentLayout" stretch="0,0,0,1">
         <property name="leftMargin">
          <number>0</number>
         </property>
@@ -133,12 +133,22 @@
          </layout>
         </item>
         <item>
+         <widget class="QLabel" name="backCameraPic">
+          <property name="text">
+           <string>Camera</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
          <layout class="QHBoxLayout" name="reportLayout">
           <property name="topMargin">
            <number>0</number>
           </property>
           <item>
-           <widget class="QFrame" name="frame">
+           <widget class="QFrame" name="totalSumFrame">
             <property name="styleSheet">
              <string notr="true">background-color: rgb(196, 160, 0);</string>
             </property>
