--- a/BHMI.ui
+++ b/BHMI.ui
@@ -288,6 +288,12 @@
                  <property name="suffix">
                   <string> bar</string>
                  </property>
+                 <property name="minimum">
+                  <double>-999999.000000000000000</double>
+                 </property>
+                 <property name="maximum">
+                  <double>99999999.000000000000000</double>
+                 </property>
                 </widget>
                </item>
               </layout>
@@ -324,6 +330,12 @@
                  <property name="suffix">
                   <string> bar</string>
                  </property>
+                 <property name="minimum">
+                  <double>-999999.000000000000000</double>
+                 </property>
+                 <property name="maximum">
+                  <double>99999999.000000000000000</double>
+                 </property>
                 </widget>
                </item>
               </layout>
@@ -359,6 +371,12 @@
                  </property>
                  <property name="suffix">
                   <string/>
+                 </property>
+                 <property name="minimum">
+                  <double>-999999.000000000000000</double>
+                 </property>
+                 <property name="maximum">
+                  <double>99999999.000000000000000</double>
                  </property>
                 </widget>
                </item>
