--- a/BHMI.ui
+++ b/BHMI.ui
@@ -21,7 +21,7 @@
        <number>2</number>
       </property>
       <item>
-       <layout class="QVBoxLayout" name="bucketParentLayout" stretch="0,0,0,1">
+       <layout class="QVBoxLayout" name="bucketParentLayout" stretch="0,0,1">
         <property name="leftMargin">
          <number>0</number>
         </property>
@@ -38,6 +38,12 @@
           </property>
           <item>
            <widget class="QFrame" name="frame_3">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>50</height>
+             </size>
+            </property>
             <property name="frameShape">
              <enum>QFrame::Box</enum>
             </property>
@@ -107,6 +113,12 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>50</height>
+             </size>
+            </property>
             <property name="styleSheet">
              <string notr="true">background-color: rgb(114, 159, 207);</string>
             </property>
@@ -131,16 +143,6 @@
            </widget>
           </item>
          </layout>
-        </item>
-        <item>
-         <widget class="QLabel" name="backCameraPic">
-          <property name="text">
-           <string>Camera</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
         </item>
         <item>
          <layout class="QHBoxLayout" name="reportLayout">
@@ -212,7 +214,7 @@
                 </font>
                </property>
                <property name="text">
-                <string>0</string>
+                <string>0 Kilogram</string>
                </property>
               </widget>
              </item>
@@ -234,6 +236,18 @@
           </property>
           <item>
            <widget class="QFrame" name="frame_2">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>57</height>
+             </size>
+            </property>
             <property name="frameShape">
              <enum>QFrame::Box</enum>
             </property>
@@ -260,6 +274,12 @@
               <layout class="QVBoxLayout" name="verticalLayout_4">
                <item>
                 <widget class="QLabel" name="label">
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777215</width>
+                   <height>70</height>
+                  </size>
+                 </property>
                  <property name="font">
                   <font>
                    <weight>75</weight>
@@ -302,6 +322,12 @@
               <layout class="QVBoxLayout" name="verticalLayout_5">
                <item>
                 <widget class="QLabel" name="label_3">
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777215</width>
+                   <height>70</height>
+                  </size>
+                 </property>
                  <property name="font">
                   <font>
                    <weight>75</weight>
@@ -344,6 +370,12 @@
               <layout class="QVBoxLayout" name="verticalLayout_6">
                <item>
                 <widget class="QLabel" name="label_5">
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777215</width>
+                   <height>70</height>
+                  </size>
+                 </property>
                  <property name="font">
                   <font>
                    <weight>75</weight>
