--- a/specRes.qrc
+++ b/specRes.qrc
@@ -2,4 +2,7 @@
     <qresource prefix="/new/prefix1">
         <file>scr.png</file>
     </qresource>
+    <qresource prefix="/">
+        <file>logo.png</file>
+    </qresource>
 </RCC>
