--- a/BHMI.ui
+++ b/BHMI.ui
@@ -356,9 +356,8 @@ QPushButton[BucketsBtn=true]{
                </size>
               </property>
               <property name="styleSheet">
-               <string notr="true">QFrame#frame_3{
-	border:5px solid rgb(0, 0, 0);
-}</string>
+               <string notr="true">
+	background-color: rgb(78, 154, 6)</string>
               </property>
               <property name="frameShape">
                <enum>QFrame::Box</enum>
@@ -449,7 +448,7 @@ QPushButton[BucketsBtn=true]{
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_10">
               <property name="leftMargin">
-               <number>1</number>
+               <number>7</number>
               </property>
               <property name="rightMargin">
                <number>1</number>
@@ -486,6 +485,57 @@ QPushButton[BucketsBtn=true]{
                  <bool>true</bool>
                 </property>
                </widget>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_2">
+                <property name="spacing">
+                 <number>2</number>
+                </property>
+                <item>
+                 <widget class="QPushButton" name="goTop">
+                  <property name="minimumSize">
+                   <size>
+                    <width>40</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>40</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>↑</string>
+                  </property>
+                  <property name="BucketsBtn" stdset="0">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="goBottom">
+                  <property name="minimumSize">
+                   <size>
+                    <width>40</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>40</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>↓</string>
+                  </property>
+                  <property name="BucketsBtn" stdset="0">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </item>
               <item>
                <widget class="QPushButton" name="rmvBtn">
@@ -567,6 +617,19 @@ QPushButton[BucketsBtn=true]{
              <property name="bottomMargin">
               <number>1</number>
              </property>
+             <item>
+              <spacer name="horizontalSpacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
              <item>
               <layout class="QVBoxLayout" name="verticalLayout_4">
                <item>
@@ -662,6 +725,19 @@ QPushButton[BucketsBtn=true]{
                 </widget>
                </item>
               </layout>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_2">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
              </item>
             </layout>
            </widget>
